# gh-analyzer

./: .gitignore  LICENSE  README.md  cli.py  exceptions.py  github_api.py  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
gh-analyzer/: cli.py  github_api.py  main.py
gh_analyzer/: ai_summary.py  analytics.py  cache.py  cli.py  exceptions.py  github_api.py  main.py  models.py  reporter.py  risk.py
tests/: test_analytics.py  test_rate_limit_warning.py  test_risk.py
