[tool.poetry]
name = "gh-analyzer"
version = "0.1.3"
description = "GitHub repository health analyzer — scores repos 0-100 across commit momentum, bus factor, issue resolution, PR latency, and release cadence"
authors = ["Alireza <a.reza.eftekhar@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Alir3zag/gh-analyzer"
repository = "https://github.com/Alir3zag/gh-analyzer"
keywords = ["github", "analytics", "cli", "repository", "health"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{include = "gh_analyzer"}]

[tool.poetry.scripts]
gh-analyzer = "gh_analyzer.main:main"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9"
rich = "^13.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"